--- a/pom.xml
+++ b/pom.xml
@@ -3,23 +3,13 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.mycompany.app</groupId>
     <artifactId>myapp</artifactId>
-
-
     <version>1.0-SNAPSHOT</version>
     <name>myapp</name>
     <url>http://maven.apache.org</url>
-
-
-
-
-
     <properties>
-
         <!-- 文件拷贝时的编码 -->
-
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-
         <!-- 编译时的编码 -->
         <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
     </properties>
@@ -29,14 +19,14 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>3.8.1</version>
+            <version>4.12</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>19.0</version>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.4</version>
         </dependency>
     </dependencies>
 
@@ -63,22 +53,14 @@
             </plugin>
 
             <plugin>
-
                 <groupId>org.apache.maven.plugins</groupId>
-
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
-
                 <configuration>
-
                     <source>1.8</source>
-
                     <target>1.8</target>
-
                     <encoding>UTF-8</encoding>
-
                 </configuration>
-
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -87,7 +69,9 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>com.mycompany.app.App</mainClass>
+                            <addClasspath>true</addClasspath>
+                            <classpathPrefix>con/;lib/*</classpathPrefix>
+                            <mainClass>com.mycompany.app.RandomString</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
